--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to my Flask App!</h1>
+ <h1>
+In every bull market, many 100x coins will appear, and those that can increase more than 100x are almost second-tier altcoins. Because judging from the current market value, it is impossible for Bitcoin and Ethereum to rise 100x because of a round of bull market. 100x altcoins are what everyone hopes to find, because 100x altcoins can allow people to quickly realize wealth accumulation and even achieve wealth freedom.
+100x altcoins generally have several characteristics. First: The market capitalization is relatively small, with a general market capitalization of US$50 million to US$1 billion. Second: great potential and relatively high recognition. Third: In line with current hot topics and hot fields. Next, I will focus on why CFX will become the 100-fold currency in the next bull market. It is for reference only, and everyone can judge by themselves.
+First: CFX is currently the only compliant public chain currency recognized by China. Everyone knows that mainland China is the second largest super economy in the world. Economists in Europe and the Goldman Sachs Group in the United States predict that China will overtake the United States in 2035 to become the world's largest economy. As we all know, capital is one of the most important factors driving up the price of cryptocurrencies. The Chinese government has explicitly banned cryptocurrencies, but supports CFX compliance. At the same time, China's state-owned enterprise and one of the world's largest telecommunications companies: China Telecom Group has cooperated with CFX, and there are still many projects to be developed that are also ready to cooperate with CFX. These will all be important factors driving CFX up.
+Second: The biggest good news in the cryptocurrency market this year is that Hong Kong will open legal cryptocurrency trading. CFX is a Hong Kong concept token. Just now I said that China’s economy is huge. Hong Kong is one of China’s special zones. This will attract a large amount of Chinese funds to enter Hong Kong’s cryptocurrency market, and promote a sharp rise in cryptocurrency prices. TRON founder Justin Sun said that the next round of super bull market will be driven by Chinese funds. As a Chinese compliant public chain token, CFX will definitely benefit from this.
+Third: At present, CFX is still very small, only about 1 billion US dollars. If it rises 100 times, then it will only have a market value of 100 billion US dollars. Compared with the total market value of cryptocurrencies in the next bull market of 6 trillion US dollars, CFX1000 A market cap of 100 million is insignificant. CFX has huge potential.
+Based on the above analysis, CFX may have a 100X increase in the next round of bull market. The above is for reference only.
+ </h1>
 </body>
 </html>
 
